objects/Folder_Details_With_Obj_Name__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Folder_Details_With_Obj_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Folder_Details_With_Obj_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Folder_Creation_Date__c</fullName>
        <label>Folder Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Folder_Document_Ids__c</fullName>
        <label>Folder Document Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Id__c</fullName>
        <label>Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Name__c</fullName>
        <label>Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Sent_Date__c</fullName>
        <label>Folder Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Folder_Status__c</fullName>
        <label>Folder Status</label>
        <picklist>
            <picklistValues>
                <fullName>SHARED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARTIALLY SIGNED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANCELLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXECUTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRAFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELETED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPIRED</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Folder_Details_With_Obj_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Folder_Details_With_Obj_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>Folder_Details_With_Obj_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipName>Folder_Details_With_Obj_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SF_Record_Id__c</fullName>
        <label>SF Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>eSignGenie Folder Detail</label>
    <nameField>
        <label>Folder Details With Obj Name Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>eSignGenie Folder Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>